fixed narrow height off screen issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,24 @@
 @import "variables";
 
 :host {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
+  padding: 1rem;
   height: 100vh;
+  width: 100vw;
+}
+
+.controls {
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+  padding: 30px;
+  margin: 10px;
+  margin-top: auto;
+  border-radius: $radius;
+
+  @media screen and (min-width: 400px) {
+    width: 400px;
+  }
 }
 
 h1 {
@@ -16,25 +29,9 @@ h1 {
   line-height: 1.4;
 }
 
-.controls {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  backdrop-filter: blur(30px);
-  -webkit-backdrop-filter: blur(30px);
-  padding: 30px;
-  margin: auto 10px;
-  border-radius: $radius;
-
-  @media screen and (min-width: 486px) {
-    width: 400px;
-  }
-}
-
 input {
   width: 100%;
   padding: 20px 0;
-  margin-bottom: 20px;
   border-radius: $radius;
   background-color: transparent;
   color: $color-white;
